tests/samples/positive/std/std_text.ax
module std_text;

import std.core.text;

fn main() -> i32 {
    let hello: *const u8 = c"hello";
    let same: SpanU8 = span_u8(hello, cast(usize, 5));
    let again: SpanU8 = span_u8(c"hello", cast(usize, 5));
    let different: SpanU8 = span_u8(c"world", cast(usize, 5));
    if !bytes_equal(same, again) {
        return 1;
    }
    if bytes_equal(same, different) {
        return 2;
    }
    if c_strlen(hello) != cast(usize, 5) {
        return 3;
    }
    if !is_ascii_digit(b'7') || !is_ascii_alpha(b'A') || !is_ascii_space(b'\n') {
        return 4;
    }
    var number: i32 = 41;
    let one: Span<i32> = span(ptr_cast(*const i32, &number), cast(usize, 1));
    if one.len != cast(usize, 1) || one.data[0] != 41 {
        return 5;
    }
    let writable: MutSpan<i32> = mut_span(&number, cast(usize, 1));
    writable.data[0] = 42;
    if number != 42 {
        return 6;
    }
    return 0;
}
